--- a/Practice-3/style.css
+++ b/Practice-3/style.css
@@ -21,6 +21,10 @@ td ,th{
     padding: 10px;
     font-size: 16px;
 }
+tbody,tr{
+    border: 1px solid #ddd;
+
+}
 th{
     font-weight: bold;
     background:rgb(90, 222, 90);
@@ -31,19 +35,16 @@ tr:nth-child(even){
 tr:nth-child(odd){
     background: white;
 }
-.btn-1{
-    background: lightblue;
-    border-radius: 3px;
+tbody tr:nth-last-child(1) td:nth-child(4){
+    background:rgb(245, 192, 94);
 }
-.btn-2{
+tbody tr:nth-last-child(1) td:nth-child(1){
     background: pink;
-    border-radius: 3px;
 }
-.btn-3{
-    background: lightskyblue;
-    border-radius: 3px;
+tbody tr:nth-last-child(4) td:nth-child(1){
+    background: rgb(204, 231, 240);
 }
-.btn-4{
-    background: rgb(223, 223, 102);
-    border-radius: 3px;
+tbody tr:nth-last-child(4) td:nth-child(4){
+    background: lightblue;
+    border-radius: 0px 10px 0px 0px;
 }
